--- a/src/main/resources/view/ManageStudent.fxml
+++ b/src/main/resources/view/ManageStudent.fxml
@@ -43,7 +43,7 @@
             <Font name="System Italic" size="13.0" />
          </font>
       </JFXButton>
-      <TableView fx:id="tblStudent" layoutX="21.0" layoutY="280.0" prefHeight="257.0" prefWidth="540.0">
+      <TableView fx:id="tblStudent" layoutX="21.0" layoutY="280.0" onMouseClicked="#StudenttblClicked" prefHeight="257.0" prefWidth="540.0">
         <columns>
           <TableColumn fx:id="ColId" prefWidth="50.0" text="Id" />
           <TableColumn fx:id="ColName" minWidth="0.0" prefWidth="121.0" text="Name" />
